新增画星星

--- a/demo.html
+++ b/demo.html
@@ -3,8 +3,8 @@
 </head>
 <body style="background: #eaeaea;">
 	<script type="module">
-		import LoginCanvas from './strLine.js';
-		new LoginCanvas(window.innerWidth, window.innerHeight, 30, 'rgba(120,120,120,0.19)', 'rgba(120,50,120,0.19)');
+		import LoginCanvas from './strStar.js';
+		new LoginCanvas(window.innerWidth, window.innerHeight, 30, 'rgba(255,165,0,0.19)', 'rgba(0,0,255,0.19)');
 	</script>
 </body>
 </html>
